--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^1.10",
         "doctrine/orm": "^2.6",
+        "eb22fbb4/rbac-bundle": "dev-master",
         "knplabs/knp-menu-bundle": "^2.2",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
