--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/",
-            "Eb22fbb4\\Bundle\\RBACBundle\\": "../bundle/rbac-bundle/src/"
+            "App\\": "src/"
         }
     },
     "autoload-dev": {
