--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^1.10",
         "doctrine/orm": "^2.6",
-        "eb22fbb4/rbac-bundle": "dev-master",
         "knplabs/knp-menu-bundle": "^2.2",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
@@ -24,6 +23,12 @@
         "symfony/validator": "4.2.*",
         "symfony/yaml": "4.2.*"
     },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
+        "symfony/debug-bundle": "4.2.*",
+        "symfony/maker-bundle": "^1.11",
+        "symfony/web-profiler-bundle": "4.2.*"
+    },
     "config": {
         "preferred-install": {
             "*": "dist"
@@ -32,7 +37,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Eb22fbb4\\Bundle\\RBACBundle\\": "../bundle/rbac-bundle/src/"
         }
     },
     "autoload-dev": {
@@ -68,11 +74,5 @@
             "allow-contrib": false,
             "require": "4.2.*"
         }
-    },
-    "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.1",
-        "symfony/debug-bundle": "4.2.*",
-        "symfony/maker-bundle": "^1.11",
-        "symfony/web-profiler-bundle": "4.2.*"
     }
 }
