--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,7 +4,7 @@ security:
 
     providers:
         user_provider:
-            entity: { class: App\Entity\User, property: identifier }
+            entity: { class: App\Entity\User, property: username }
 
     firewalls:
         dev:
